--- a/views/index.jade
+++ b/views/index.jade
@@ -2,14 +2,14 @@ extends layout
 
 block body
   div(ng-controller='AppCtrl')
-    h2 Hello {{name}}
+    h2.main-heading You want to do the things {{name}}
     ul.menu
       li
         a(href='view1') view1
       li
         a(href='view2') view2
 
-    div(ng-view)
+    #wallpaper(ng-view)
 
     div
       | Angular seed app: v
@@ -17,5 +17,5 @@ block body
 
     table.table
       tr
-        td Hello
-        td World
+        td Doooo
+        td the thinnnnngs
