--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html(ng-app="myApp")
     meta(charset='utf8')
     base(href='/')
     title Angular Express Seed App
-    link(rel='stylesheet', href='/public/css/app.css')
+    link(rel='stylesheet', href='/css/app.css')
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   body
     block body
