--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,10 +1,11 @@
-h1 {{words}}
+h1.the-heading {{words}}
 
-form#loginForm(method='POST', action='/user/login')
-  .formfield
-    .formfield--prompt Username:   
-      input#username(type='text', name='username')    
+.login-holder
+  form#loginForm(method='POST', action='/user/login')
     .formfield
-      .formfield--prompt Password:
-      input#password(type='password', name='password')
-    button.submit.Button.btn.btn-warning(type='button submit', role='button') Submit
+      .formfield--prompt Username <br />  
+        input#username(type='text', name='username')    
+      .formfield
+        .formfield--prompt Password <br />
+        input#password(type='password', name='password')
+      button.submit.Button.btn.btn-warning(type='button submit', role='button') Submit
